--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -3,10 +3,10 @@ name: Lint
 on:
   push:
     branches:
-      - 2.*
+      - main
   pull_request:
     branches:
-      - master
+      - main
 
 permissions:
   contents: read
